fix dashboard z-index

--- a/src/portal/content/less/app/main.less
+++ b/src/portal/content/less/app/main.less
@@ -18,96 +18,14 @@ a {
   text-decoration: none;
 }
 
-.z-index-1 {
-  z-index: 1;
+// Generating z-index-1 to z-index-100
+.generate-z-index(@counter) when (@counter <= 100) {
+  .z-index-@{counter} {
+    z-index: @counter;
+  }
+  .generate-z-index(@counter + 1);
 }
-.z-index-2 {
-  z-index: 2;
-}
-.z-index-3 {
-  z-index: 3;
-}
-.z-index-4 {
-  z-index: 4;
-}
-.z-index-5 {
-  z-index: 5;
-}
-.z-index-6 {
-  z-index: 6;
-}
-.z-index-7 {
-  z-index: 7;
-}
-.z-index-8 {
-  z-index: 8;
-}
-.z-index-9 {
-  z-index: 9;
-}
-.z-index-10 {
-  z-index: 10;
-}
-.z-index-11 {
-  z-index: 11;
-}
-.z-index-12 {
-  z-index: 12;
-}
-.z-index-13 {
-  z-index: 13;
-}
-.z-index-14 {
-  z-index: 14;
-}
-.z-index-15 {
-  z-index: 15;
-}
-.z-index-16 {
-  z-index: 16;
-}
-.z-index-17 {
-  z-index: 17;
-}
-.z-index-18 {
-  z-index: 18;
-}
-.z-index-19 {
-  z-index: 19;
-}
-.z-index-20 {
-  z-index: 20;
-}
-.z-index-21 {
-  z-index: 21;
-}
-.z-index-22 {
-  z-index: 22;
-}
-.z-index-23 {
-  z-index: 23;
-}
-.z-index-24 {
-  z-index: 24;
-}
-.z-index-25 {
-  z-index: 25;
-}
-.z-index-26 {
-  z-index: 26;
-}
-.z-index-27 {
-  z-index: 27;
-}
-.z-index-28 {
-  z-index: 28;
-}
-.z-index-29 {
-  z-index: 29;
-}
-.z-index-30 {
-  z-index: 30;
-}
+.generate-z-index(100);
 
 
 button {
